--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,11 @@
     <name>spring-boot-demo</name>
     <description>Demo project for Spring Boot</description>
 
-    <properties>
-        <java.version>11</java.version>
+	<properties>
+        <java.version>8</java.version>
+        <log4j2.version>2.17.1</log4j2.version>
     </properties>
+
 
     <dependencies>
         <dependency>
